--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section><!-- TPs-->
             <nav>        
                 <ul>
-                    <li><a href="./TP/">Lemon Pie</a></li>            
+                    <li><a href="./Lemon_Pie/index.html">Lemon Pie</a></li>            
                     <li><a href="./Petshop/index.html">PetShop</a></li>
                 </ul>
             </nav>
