--- a/CV/index.html
+++ b/CV/index.html
@@ -5,51 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <img src="./img/logo batman.png" alt="foto curriculum">
-        <h1>Curriculum Vitae</h1>
+        <img id=fotoMia src="./img/foto mia.jpg" alt="foto curriculum">
+        <h1>Ocampo Maximiliano</h1>
+        <h3>Curriculum Vitae</h3>
     </header>
     <main>
-        <section><!-- Datos Personales-->
+        <section id=info><!-- Datos Personales-->
             <h2>Datos Personales</h2>
             <ul>
-                <li><spam>Nombre Completo:</spam> Ocampo Maximiliano</li>
-                <li><spam>Fecha de Nacimiento:</spam> 16/07/88</li>
-                <li><spam>Lugar de Nacimiento:</spam> Mar del Plata, Argentina</li>
+                <li><span>Nombre:</span> Ocampo Maximiliano</li>
+                <li><span>Lugar de Nacimiento:</span> Mar del Plata, Argentina</li>
+                <li><span>Fecha de Nacimiento:</span> 16/07/88</li>
+                <li><span>Edad:</span> 33 años</li>
+                <li><span>Email:</span> maximiliano.88@hotmail.com</li>
             </ul>
         </section>
-        <br>
         <section><!--Formación-->
             <h2>Formación Académica</h2>
             <dl>
                 <dt><span> 1996 - 2002:</span> Escuela San Roque</dt>
-                <dd>Primaria - Secundaria</dd>
+                <dd>* Primaria - Secundaria</dd>
                 <dt><span> 2003 - 2006:</span> Escuela San Roque</dt>
-                <dd>Polimodal </dd>
+                <dd>* Polimodal </dd>
                 <dt><span> 2007 - 2016:</span> UNMDP</dt>
-                <dd>Contador Público</dd>
+                <dd>* Contador Público</dd>
                 <dt><span> 2021 - Actualidad:</span> Digital House</dt>
-                <dd>CTD</dd>
+                <dd>* CTD</dd>
             </dl>
         </section>
         <section><!--Experiencia-->
             <h2>Experiencia Laboral</h2>
             <dl>
                 <dt><span> 2007 - 2009:</span> Iniciación</dt>
-                <dd>Proceso Iniciación</dd>
+                <dd>* Proceso Iniciación</dd>
                 <dt><span>2009 - 2015:</span> Iniciación II</dt>
-                <dd>Proceso Iniciación II</dd>
+                <dd>* Proceso Iniciación II</dd>
                 <dt><span>2015 - Actualidad:</span> Iniciación III</dt>
-                <dd>Proceso Iniciación</dd>
+                <dd>* Proceso Iniciación</dd>
             </dl>
         </section>
     </main>
     <footer>
-
-        <img src="./img/ico_instagram.png" alt="Instragram">
-        <img src="./img/ico_linkedin.png" alt="Linkedin">
+        <img id="redSocial" src="./img/ico_instagram.png" alt="Instragram">
+        <img id="redSocial" src="./img/ico_linkedin.png" alt="Linkedin">
     </footer>
 </body>
 </html>
