--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                 <ul>
                     <li><a href="./Lemon_Pie/index.html">Lemon Pie</a></li>            
                     <li><a href="./Petshop/index.html">PetShop</a></li>
+                    <li><a href="/CV/index.html" >CV</a></li>
                 </ul>
             </nav>
-        </section>
+        </section>p
     </main>
 </body>
 </html>
