--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Indice Mío</title>
 </head>
 <body>
     <header>        
@@ -16,10 +16,10 @@
                 <ul>
                     <li><a href="./Lemon_Pie/index.html">Lemon Pie</a></li>            
                     <li><a href="./Petshop/index.html">PetShop</a></li>
-                    <li><a href="/CV/index.html" >CV</a></li>
+                    <li><a href="./CV/index.html">CV</a></li>
                 </ul>
             </nav>
-        </section>p
+        </section>
     </main>
 </body>
 </html>
