--- a/CV/index.html
+++ b/CV/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "preconnect" href = "https://fonts.googleapis.com">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link href = "https: //fonts.googleapis.com/css2? familia = Crimson + Pro: ital, wght @ 0,200; 0,300; 1,200 & display = swap "rel =" stylesheet ">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -50,8 +54,8 @@
         </section>
     </main>
     <footer>
-        <img id="redSocial" src="./img/ico_instagram.png" alt="Instragram">
-        <img id="redSocial" src="./img/ico_linkedin.png" alt="Linkedin">
+        <a href="www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/elmaxis" target="_blank"><img id="redSocial" src="./img/icono Github.png" alt="Github"></a>
     </footer>
 </body>
 </html>
