--- a/CV/index.html
+++ b/CV/index.html
@@ -55,7 +55,7 @@
     </main>
     <footer>
         <a href="www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/elmaxis" target="_blank"><img id="redSocial" src="./img/icono Github.png" alt="Github"></a>
+        <a href="https://github.com/elmaxis" target="_blank"><i class="fab fa-github"></i></a>
     </footer>
 </body>
 </html>
