--- a/CV/index.html
+++ b/CV/index.html
@@ -54,7 +54,7 @@
         </section>
     </main>
     <footer>
-        <a href="https://www.linkedin.com/feed/" target="_blank"><i id="redsocial" class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com" target="_blank"><i id="redsocial" class="fab fa-linkedin"></i></a>
         <a href="https://github.com/elmaxis" target="_blank"><i id="redsocial" class="fab fa-github"></i></a>
     </footer>
 </body>
