--- a/Petshop/index.html
+++ b/Petshop/index.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Shop</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
 <body bgcolor="8097AD">
     <header>
-    <section><!--Barra negra superior-->
-        <p>Grandes Ofertas en Comedores</p>
+    <section id="encabezado"><!--Barra negra superior-->
+        <p class="tono1">Grandes Ofertas en Comedores</p>
         <img src="./Img/Spanish.png" alt="Idioma">
         <img src="./Img/Price.png" alt="Moneda">
-    </section><!--Encabezado-->    
+    </section>
+    <section Id="encabezado2"><!--Encabezado-->    
         <div>
             <img src="./Img/Logo.png" alt="Logo Pet">
         </div>
-        <nav>
+        <nav class="tono1">
             <ul type=none>
                 <li><img src="./Img/patita chiquita.png" alt="patita">Categorias</li>
                 <li><img src="./Img/patita chiquita.png" alt="patita">Pets</li>
@@ -25,17 +26,18 @@
                 <li><img src="./Img/patita chiquita.png" alt="patita">Contáctanos</li>            
             </ul>
         </nav>
+    </section>
     </header>
     <main>
-        <section><!-- Banner-->   
+        <section id="banner"><!-- Banner-->   
             <div>
                 <img src="./Img/foto.png" alt="Foto Banner">
-                <p>¡Es un placer tenerte aquí!</p>
+                <h2>¡Es un placer tenerte aquí!</h2>
                 <p>¡Comederos en descuento!</p>
-                <p>COMEDEROS</p>                
+                <bottom>COMEDEROS</bottom>                
             </div>
         </section>
-        <section><!-- Prod. destacados-->
+        <section id="ProdDestacados"><!-- Prod. destacados-->
             <div>
                 <img src="./Img/patita grande.png" alt="patita grande">
                 <h1>Productos Destacados</h1>
@@ -48,56 +50,56 @@
                 </ul>
             </nav>  
         </section>
-        <section><!--Productos-->
+        <section id="productos"><!--Productos-->
             <div>
                 <img src="./Img/churrasquito.png" alt="churrasquito">
-                <p>Juguete Churrasquito</p>
+                <h3>Juguete Churrasquito</h3>
                 <p>$150</p>
             </div>
             <div>
                 <img src="./Img/comedero.png" alt="comedero">
-                <p>Comededor para perro</p>
+                <h3>Comededor para perro</h3>
                 <p>$250</p>
             </div>
             <div>
                 <img src="./Img/Huesito.png" alt="huesitos">
-                <p>Juguete Huesito</p>
+                <h3>Juguete Huesito</h3>
                 <p>$650</p>
             </div>
         </section>
-        <section><!-- Contacto-->
-            <h3>Contáctanos</h3>
+        <section id="contacto"><!-- Contacto-->
+            <h2>Contáctanos</h2>
             <p>Nombre y Apellido</p>
             <p>Ingresá tu Correo electrónico</p>
             <p>Teléfono</p>         
         </section>
-        <section><!--Botones-->
-            <p>Resetear</p>
-            <p>Enviar</p>
+        <section id="re"><!--Botones-->
+            <bottom>Resetear</bottom>
+            <bottom>Enviar</bottom>
         </section>
     </main>
     <footer>
-        <section><!--Barra suscripción-->
+        <section id="footer1"><!--Barra suscripción-->
             <div><img src="./Img/sobre.png" alt="sobre">Suscríbete para más novedades</div>
             <div>
                 <p>Ingresá tu correo electrónico</p>
-                <p>Suscribirme</p>
+                <bottom id="suscribirme">Suscribirme</bottom>
             </div>
         </section>  
         <section><!--fin de pagina-->
             <div><!-- Localidad-->
                 <img src="./Img/icono localidad.png" alt="ubicación">
-                <h3>Localidad</h3>
+                <h4>Localidad</h4>
                 <p>Calle - Provincia</p>
             </div>        
             <div><!--Teléfono-->
                 <img src="./Img/icono tel.png" alt="télefono">
-                <h3>Teléfono</h3>
+                <h4>Teléfono</h4>
                 <p>Número de teléfono</p>
             </div>
             <div><!--Correo-->
                 <img src="./Img/Icono correo.png" alt="correo">
-                <h3>Correo Electrónico</h3>
+                <h4>Correo Electrónico</h4>
                 <p>Dirección de correo</p>
             </div>                 
         </section>
@@ -105,8 +107,8 @@
         <div><!--Logo-->
             <img src="./Img/Logo.png" alt="logo">
         </div>
-        <section><!--derechos-->
-            <p>Todos los derechos reservados Front End</p>
+        <section id="final"><!--derechos-->
+            <h5>Todos los derechos reservados Front End</h5>
         </section>
     </footer>
 </body>
